src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> SourceFile
Rule 2     Type -> TypeName
Rule 3     Type -> TypeLit
Rule 4     TypeName -> TypeToken
Rule 5     TypeName -> QualifiedIdent
Rule 6     TypeToken -> INT
Rule 7     TypeToken -> FLOAT
Rule 8     TypeToken -> BOOL
Rule 9     TypeToken -> STRING
Rule 10    TypeToken -> TYPE IDENTIFIER
Rule 11    TypeLit -> ArrayType
Rule 12    TypeLit -> ST StructType
Rule 13    TypeLit -> PointerType
Rule 14    TypeLit -> MapType
Rule 15    TypeLit -> SliceType
Rule 16    ST -> <empty>
Rule 17    SliceType -> LSQUARE RSQUARE ElementType
Rule 18    MapType -> MAP LSQUARE KeyType RSQUARE ElementType
Rule 19    KeyType -> Type
Rule 20    ArrayType -> LSQUARE ArrayLength RSQUARE ElementType
Rule 21    ArrayLength -> I INT_LIT
Rule 22    ElementType -> Type
Rule 23    StructType -> FuncScope STRUCT LCURL FieldDeclRep RCURL EndScope
Rule 24    FuncScope -> <empty>
Rule 25    FieldDeclRep -> FieldDeclRep FieldDecl Semi
Rule 26    FieldDeclRep -> epsilon
Rule 27    FieldDecl -> IdentifierList Type
Rule 28    PointerType -> MULTIPLY BaseType
Rule 29    BaseType -> Type
Rule 30    Signature -> Parameters ResultOpt
Rule 31    ResultOpt -> Result
Rule 32    ResultOpt -> epsilon
Rule 33    Result -> Parameters
Rule 34    Result -> Type
Rule 35    Parameters -> LPAREN ParametersList RPAREN
Rule 36    Parameters -> LPAREN RPAREN
Rule 37    ParametersList -> ParameterDecl
Rule 38    ParametersList -> ParametersList COMMA ParameterDecl
Rule 39    ParameterDecl -> IdentifierList Type
Rule 40    ParameterDecl -> Type
Rule 41    Block -> LCURL StatementList RCURL
Rule 42    StatementList -> StatementRep
Rule 43    StatementRep -> StatementRep Statement Semi
Rule 44    StatementRep -> epsilon
Rule 45    Declaration -> ConstDecl
Rule 46    Declaration -> TypeDecl
Rule 47    Declaration -> VarDecl
Rule 48    TopLevelDecl -> Declaration
Rule 49    TopLevelDecl -> FunctionDecl
Rule 50    ConstDecl -> CONST ConstSpec
Rule 51    ConstDecl -> CONST LPAREN ConstSpecRep RPAREN
Rule 52    ConstSpecRep -> ConstSpecRep ConstSpec Semi
Rule 53    ConstSpecRep -> epsilon
Rule 54    ConstSpec -> IdentifierList TypeExprListOpt
Rule 55    TypeExprListOpt -> Type EQUALS ExpressionList
Rule 56    IdentifierList -> IDENTIFIER
Rule 57    IdentifierList -> IdentifierRep
Rule 58    IdentifierRep -> IdentifierRep COMMA IDENTIFIER
Rule 59    IdentifierRep -> IDENTIFIER COMMA IDENTIFIER
Rule 60    ExpressionList -> Expression ExpressionRep
Rule 61    ExpressionRep -> ExpressionRep COMMA Expression
Rule 62    ExpressionRep -> epsilon
Rule 63    TypeDecl -> TYPE TypeSpec
Rule 64    TypeDecl -> TYPE LPAREN TypeSpecRep RPAREN
Rule 65    TypeSpecRep -> TypeSpecRep TypeSpec Semi
Rule 66    TypeSpecRep -> epsilon
Rule 67    TypeSpec -> AliasDecl
Rule 68    TypeSpec -> TypeDef
Rule 69    AliasDecl -> IDENTIFIER EQUALS Type
Rule 70    TypeDef -> IDENTIFIER Type
Rule 71    VarDecl -> VAR VarSpec
Rule 72    VarDecl -> VAR LPAREN VarSpecRep RPAREN
Rule 73    VarSpecRep -> VarSpecRep VarSpec Semi
Rule 74    VarSpecRep -> epsilon
Rule 75    VarSpec -> IdentifierList Type ExpressionListOpt
Rule 76    ExpressionListOpt -> EQUALS ExpressionList
Rule 77    ExpressionListOpt -> epsilon
Rule 78    ExpressionListOpt -> EQUALS MALLOC LPAREN I INT_LIT RPAREN
Rule 79    ShortVarDecl -> IDENTIFIER SHORT_ASSIGNMENT Expression
Rule 80    FunctionDecl -> FUNC FunctionName CreateScope Function EndScope
Rule 81    FunctionDecl -> FUNC FunctionName CreateScope Signature EndScope
Rule 82    CreateScope -> <empty>
Rule 83    EndScope -> <empty>
Rule 84    FunctionName -> IDENTIFIER
Rule 85    Function -> Signature RetTypeSet FunctionBody
Rule 86    RetTypeSet -> <empty>
Rule 87    FunctionBody -> Block
Rule 88    Operand -> Literal
Rule 89    Operand -> OperandName
Rule 90    Operand -> LPAREN Expression RPAREN
Rule 91    Literal -> BasicLit
Rule 92    BasicLit -> I INT_LIT
Rule 93    BasicLit -> F FLOAT_LIT
Rule 94    BasicLit -> C IMAGINARY_LIT
Rule 95    BasicLit -> B BOOL_LIT
Rule 96    BasicLit -> S STRING_LIT
Rule 97    B -> <empty>
Rule 98    I -> <empty>
Rule 99    F -> <empty>
Rule 100   C -> <empty>
Rule 101   S -> <empty>
Rule 102   OperandName -> IDENTIFIER
Rule 103   QualifiedIdent -> IDENTIFIER DOT TypeName
Rule 104   PrimaryExpr -> Operand
Rule 105   PrimaryExpr -> PrimaryExpr DOT IDENTIFIER
Rule 106   PrimaryExpr -> Conversion
Rule 107   PrimaryExpr -> PrimaryExpr LSQUARE Expression RSQUARE
Rule 108   PrimaryExpr -> PrimaryExpr Slice
Rule 109   PrimaryExpr -> PrimaryExpr TypeAssertion
Rule 110   PrimaryExpr -> PrimaryExpr LPAREN ExpressionListTypeOpt RPAREN
Rule 111   Slice -> LSQUARE ExpressionOpt COLON ExpressionOpt RSQUARE
Rule 112   Slice -> LSQUARE ExpressionOpt COLON Expression COLON Expression RSQUARE
Rule 113   TypeAssertion -> DOT LPAREN Type RPAREN
Rule 114   ExpressionListTypeOpt -> ExpressionList
Rule 115   ExpressionListTypeOpt -> epsilon
Rule 116   Expression -> UnaryExpr
Rule 117   Expression -> Expression COMPARE_OR Expression
Rule 118   Expression -> Expression COMPARE_AND Expression
Rule 119   Expression -> Expression EQEQ Expression
Rule 120   Expression -> Expression NOTEQUALS Expression
Rule 121   Expression -> Expression LESSTHAN Expression
Rule 122   Expression -> Expression GREATERTHAN Expression
Rule 123   Expression -> Expression LESSTHAN_EQUAL Expression
Rule 124   Expression -> Expression GREATERTHAN_EQUAL Expression
Rule 125   Expression -> Expression OR Expression
Rule 126   Expression -> Expression XOR Expression
Rule 127   Expression -> Expression ANDXOR Expression
Rule 128   Expression -> Expression DIVIDE Expression
Rule 129   Expression -> Expression MODULO Expression
Rule 130   Expression -> Expression LSHIFT Expression
Rule 131   Expression -> Expression RSHIFT Expression
Rule 132   Expression -> Expression PLUS Expression
Rule 133   Expression -> Expression MINUS Expression
Rule 134   Expression -> Expression MULTIPLY Expression
Rule 135   Expression -> Expression AND Expression
Rule 136   ExpressionOpt -> Expression
Rule 137   ExpressionOpt -> epsilon
Rule 138   UnaryExpr -> PrimaryExpr
Rule 139   UnaryExpr -> UnaryOp UnaryExpr
Rule 140   UnaryExpr -> NOT UnaryExpr
Rule 141   UnaryOp -> PLUS
Rule 142   UnaryOp -> MINUS
Rule 143   UnaryOp -> MULTIPLY
Rule 144   UnaryOp -> AND
Rule 145   Conversion -> TYPECAST Type LPAREN Expression RPAREN
Rule 146   Statement -> Declaration
Rule 147   Statement -> LabeledStmt
Rule 148   Statement -> SimpleStmt
Rule 149   Statement -> ReturnStmt
Rule 150   Statement -> BreakStmt
Rule 151   Statement -> ContinueStmt
Rule 152   Statement -> GotoStmt
Rule 153   Statement -> CreateScope IFSYM Block EndScope_1
Rule 154   Statement -> IfStmt
Rule 155   Statement -> SwitchStmt
Rule 156   Statement -> ForStmt
Rule 157   Statement -> DeferStmt
Rule 158   Statement -> FallThroughStmt
Rule 159   Statement -> GoStmt
Rule 160   Statement -> PrintStmt
Rule 161   Statement -> ScanStmt
Rule 162   EndScope_1 -> <empty>
Rule 163   PrintStmt -> PRINT ExpressionList
Rule 164   ScanStmt -> SCAN Expression
Rule 165   FallThroughStmt -> FALLTHROUGH
Rule 166   GoStmt -> GO Expression
Rule 167   DeferStmt -> DEFER Expression
Rule 168   SimpleStmt -> epsilon
Rule 169   SimpleStmt -> ExpressionStmt
Rule 170   SimpleStmt -> IncDecStmt
Rule 171   SimpleStmt -> Assignment
Rule 172   SimpleStmt -> ShortVarDecl
Rule 173   LabeledStmt -> Label COLON Statement
Rule 174   Label -> IDENTIFIER
Rule 175   ExpressionStmt -> Expression
Rule 176   IncDecStmt -> Expression INCREMENT
Rule 177   IncDecStmt -> Expression DECREMENT
Rule 178   Assignment -> ExpressionList assign_op ExpressionList
Rule 179   assign_op -> AssignOp
Rule 180   AssignOp -> PLUSEQUAL
Rule 181   AssignOp -> MINUSEQUAL
Rule 182   AssignOp -> TIMESEQUAL
Rule 183   AssignOp -> DIVIDE_EQUAL
Rule 184   AssignOp -> MODEQUAL
Rule 185   AssignOp -> ANDEQUAL
Rule 186   AssignOp -> OREQUAL
Rule 187   AssignOp -> XOREQUAL
Rule 188   AssignOp -> ANDXOR_EQUAL
Rule 189   AssignOp -> LSHIFT_EQUAL
Rule 190   AssignOp -> RSHIFT_EQUAL
Rule 191   AssignOp -> EQUALS
Rule 192   IfStmt -> IF Expression CreateScope IFSYM Block EndScope_1 ElseOpt
Rule 193   IFSYM -> <empty>
Rule 194   ElseOpt -> ELSE IfStmt
Rule 195   ElseOpt -> ELSE CreateScope IFSYM Block EndScope_1
Rule 196   ElseOpt -> epsilon
Rule 197   SwitchStmt -> ExprSwitchStmt
Rule 198   ExprSwitchStmt -> SWITCH Expression CCreateScope LCURL StartSwitch ExprCaseClauseList RCURL EndScope_1
Rule 199   StartSwitch -> <empty>
Rule 200   ExprCaseClauseList -> epsilon
Rule 201   ExprCaseClauseList -> ExprCaseClauseList ExprCaseClause
Rule 202   ExprCaseClause -> ExprSwitchCase COLON StatementList
Rule 203   ExprSwitchCase -> CASE ExpressionList
Rule 204   ExprSwitchCase -> DEFAULT
Rule 205   ForStmt -> FOR CCreateScope ConditionBlockOpt Block EndScope_1
Rule 206   CCreateScope -> <empty>
Rule 207   ConditionBlockOpt -> epsilon
Rule 208   ConditionBlockOpt -> Condition
Rule 209   ConditionBlockOpt -> ForClause
Rule 210   Condition -> Expression
Rule 211   ForClause -> SimpleStmt Semi ConditionOpt Semi SimpleStmt
Rule 212   ConditionOpt -> epsilon
Rule 213   ConditionOpt -> Condition
Rule 214   ReturnStmt -> RETURN ExpressionListPureOpt
Rule 215   ExpressionListPureOpt -> ExpressionList
Rule 216   ExpressionListPureOpt -> epsilon
Rule 217   BreakStmt -> BREAK LabelOpt
Rule 218   ContinueStmt -> CONTINUE LabelOpt
Rule 219   LabelOpt -> Label
Rule 220   LabelOpt -> epsilon
Rule 221   GotoStmt -> GOTO Label
Rule 222   SourceFile -> PackageClause Semi ImportDeclRep TopLevelDeclRep
Rule 223   ImportDeclRep -> epsilon
Rule 224   ImportDeclRep -> ImportDeclRep ImportDecl Semi
Rule 225   TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl Semi
Rule 226   TopLevelDeclRep -> epsilon
Rule 227   PackageClause -> PACKAGE PackageName
Rule 228   PackageName -> IDENTIFIER
Rule 229   ImportDecl -> IMPORT ImportSpec
Rule 230   ImportDecl -> IMPORT LPAREN ImportSpecRep RPAREN
Rule 231   ImportSpecRep -> ImportSpecRep ImportSpec Semi
Rule 232   ImportSpecRep -> epsilon
Rule 233   ImportSpec -> PackageNameDotOpt ImportPath
Rule 234   PackageNameDotOpt -> DOT
Rule 235   PackageNameDotOpt -> PackageName
Rule 236   PackageNameDotOpt -> epsilon
Rule 237   ImportPath -> STRING_LIT
Rule 238   Semi -> SEMICOLON
Rule 239   epsilon -> <empty>

Terminals, with rules where they appear

AND                  : 135 144
ANDEQUAL             : 185
ANDXOR               : 127
ANDXOR_EQUAL         : 188
BOOL                 : 8
BOOL_LIT             : 95
BREAK                : 217
CASE                 : 203
COLON                : 111 112 112 173 202
COMMA                : 38 58 59 61
COMPARE_AND          : 118
COMPARE_OR           : 117
CONST                : 50 51
CONTINUE             : 218
DECREMENT            : 177
DEFAULT              : 204
DEFER                : 167
DIVIDE               : 128
DIVIDE_EQUAL         : 183
DOT                  : 103 105 113 234
ELSE                 : 194 195
EQEQ                 : 119
EQUALS               : 55 69 76 78 191
FALLTHROUGH          : 165
FLOAT                : 7
FLOAT_LIT            : 93
FOR                  : 205
FUNC                 : 80 81
GO                   : 166
GOTO                 : 221
GREATERTHAN          : 122
GREATERTHAN_EQUAL    : 124
IDENTIFIER           : 10 56 58 59 59 69 70 79 84 102 103 105 174 228
IF                   : 192
IMAGINARY_LIT        : 94
IMPORT               : 229 230
INCREMENT            : 176
INT                  : 6
INT_LIT              : 21 78 92
LCURL                : 23 41 198
LESSTHAN             : 121
LESSTHAN_EQUAL       : 123
LPAREN               : 35 36 51 64 72 78 90 110 113 145 230
LSHIFT               : 130
LSHIFT_EQUAL         : 189
LSQUARE              : 17 18 20 107 111 112
MALLOC               : 78
MAP                  : 18
MINUS                : 133 142
MINUSEQUAL           : 181
MODEQUAL             : 184
MODULO               : 129
MULTIPLY             : 28 134 143
NOT                  : 140
NOTEQUALS            : 120
OR                   : 125
OREQUAL              : 186
PACKAGE              : 227
PLUS                 : 132 141
PLUSEQUAL            : 180
PRINT                : 163
RCURL                : 23 41 198
RETURN               : 214
RPAREN               : 35 36 51 64 72 78 90 110 113 145 230
RSHIFT               : 131
RSHIFT_EQUAL         : 190
RSQUARE              : 17 18 20 107 111 112
SCAN                 : 164
SEMICOLON            : 238
SHORT_ASSIGNMENT     : 79
STRING               : 9
STRING_LIT           : 96 237
STRUCT               : 23
SWITCH               : 198
TIMESEQUAL           : 182
TYPE                 : 10 63 64
TYPECAST             : 145
VAR                  : 71 72
XOR                  : 126
XOREQUAL             : 187
error                : 

Nonterminals, with rules where they appear

AliasDecl            : 67
ArrayLength          : 20
ArrayType            : 11
AssignOp             : 179
Assignment           : 171
B                    : 95
BaseType             : 28
BasicLit             : 91
Block                : 87 153 192 195 205
BreakStmt            : 150
C                    : 94
CCreateScope         : 198 205
Condition            : 208 213
ConditionBlockOpt    : 205
ConditionOpt         : 211
ConstDecl            : 45
ConstSpec            : 50 52
ConstSpecRep         : 51 52
ContinueStmt         : 151
Conversion           : 106
CreateScope          : 80 81 153 192 195
Declaration          : 48 146
DeferStmt            : 157
ElementType          : 17 18 20
ElseOpt              : 192
EndScope             : 23 80 81
EndScope_1           : 153 192 195 198 205
ExprCaseClause       : 201
ExprCaseClauseList   : 198 201
ExprSwitchCase       : 202
ExprSwitchStmt       : 197
Expression           : 60 61 79 90 107 112 112 117 117 118 118 119 119 120 120 121 121 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132 132 133 133 134 134 135 135 136 145 164 166 167 175 176 177 192 198 210
ExpressionList       : 55 76 114 163 178 178 203 215
ExpressionListOpt    : 75
ExpressionListPureOpt : 214
ExpressionListTypeOpt : 110
ExpressionOpt        : 111 111 112
ExpressionRep        : 60 61
ExpressionStmt       : 169
F                    : 93
FallThroughStmt      : 158
FieldDecl            : 25
FieldDeclRep         : 23 25
ForClause            : 209
ForStmt              : 156
FuncScope            : 23
Function             : 80
FunctionBody         : 85
FunctionDecl         : 49
FunctionName         : 80 81
GoStmt               : 159
GotoStmt             : 152
I                    : 21 78 92
IFSYM                : 153 192 195
IdentifierList       : 27 39 54 75
IdentifierRep        : 57 58
IfStmt               : 154 194
ImportDecl           : 224
ImportDeclRep        : 222 224
ImportPath           : 233
ImportSpec           : 229 231
ImportSpecRep        : 230 231
IncDecStmt           : 170
KeyType              : 18
Label                : 173 219 221
LabelOpt             : 217 218
LabeledStmt          : 147
Literal              : 88
MapType              : 14
Operand              : 104
OperandName          : 89
PackageClause        : 222
PackageName          : 227 235
PackageNameDotOpt    : 233
ParameterDecl        : 37 38
Parameters           : 30 33
ParametersList       : 35 38
PointerType          : 13
PrimaryExpr          : 105 107 108 109 110 138
PrintStmt            : 160
QualifiedIdent       : 5
Result               : 31
ResultOpt            : 30
RetTypeSet           : 85
ReturnStmt           : 149
S                    : 96
ST                   : 12
ScanStmt             : 161
Semi                 : 25 43 52 65 73 211 211 222 224 225 231
ShortVarDecl         : 172
Signature            : 81 85
SimpleStmt           : 148 211 211
Slice                : 108
SliceType            : 15
SourceFile           : 1
StartSwitch          : 198
Statement            : 43 173
StatementList        : 41 202
StatementRep         : 42 43
StructType           : 12
SwitchStmt           : 155
TopLevelDecl         : 225
TopLevelDeclRep      : 222 225
Type                 : 19 22 27 29 34 39 40 55 69 70 75 113 145
TypeAssertion        : 109
TypeDecl             : 46
TypeDef              : 68
TypeExprListOpt      : 54
TypeLit              : 3
TypeName             : 2 103
TypeSpec             : 63 65
TypeSpecRep          : 64 65
TypeToken            : 4
UnaryExpr            : 116 139 140
UnaryOp              : 139
VarDecl              : 47
VarSpec              : 71 73
VarSpecRep           : 72 73
assign_op            : 178
epsilon              : 26 32 44 53 62 66 74 77 115 137 168 196 200 207 212 216 220 223 226 232 236
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . SourceFile
    (222) SourceFile -> . PackageClause Semi ImportDeclRep TopLevelDeclRep
    (227) PackageClause -> . PACKAGE PackageName

    PACKAGE         shift and go to state 2

    PackageClause                  shift and go to state 1
    SourceFile                     shift and go to state 3
    start                          shift and go to state 4

state 1

    (222) SourceFile -> PackageClause . Semi ImportDeclRep TopLevelDeclRep
    (238) Semi -> . SEMICOLON

    SEMICOLON       shift and go to state 5

    Semi                           shift and go to state 6

state 2

    (227) PackageClause -> PACKAGE . PackageName
    (228) PackageName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 8

    PackageName                    shift and go to state 7

state 3

    (1) start -> SourceFile .

    $end            reduce using rule 1 (start -> SourceFile .)


state 4

    (0) S' -> start .



state 5

    (238) Semi -> SEMICOLON .

    IDENTIFIER      reduce using rule 238 (Semi -> SEMICOLON .)
    NOT             reduce using rule 238 (Semi -> SEMICOLON .)
    PLUS            reduce using rule 238 (Semi -> SEMICOLON .)
    MINUS           reduce using rule 238 (Semi -> SEMICOLON .)
    MULTIPLY        reduce using rule 238 (Semi -> SEMICOLON .)
    AND             reduce using rule 238 (Semi -> SEMICOLON .)
    LPAREN          reduce using rule 238 (Semi -> SEMICOLON .)
    TYPECAST        reduce using rule 238 (Semi -> SEMICOLON .)
    INT_LIT         reduce using rule 238 (Semi -> SEMICOLON .)
    FLOAT_LIT       reduce using rule 238 (Semi -> SEMICOLON .)
    IMAGINARY_LIT   reduce using rule 238 (Semi -> SEMICOLON .)
    BOOL_LIT        reduce using rule 238 (Semi -> SEMICOLON .)
    STRING_LIT      reduce using rule 238 (Semi -> SEMICOLON .)
    LCURL           reduce using rule 238 (Semi -> SEMICOLON .)
    IMPORT          reduce using rule 238 (Semi -> SEMICOLON .)
    FUNC            reduce using rule 238 (Semi -> SEMICOLON .)
    CONST           reduce using rule 238 (Semi -> SEMICOLON .)
    TYPE            reduce using rule 238 (Semi -> SEMICOLON .)
    VAR             reduce using rule 238 (Semi -> SEMICOLON .)
    $end            reduce using rule 238 (Semi -> SEMICOLON .)
    RPAREN          reduce using rule 238 (Semi -> SEMICOLON .)
    RCURL           reduce using rule 238 (Semi -> SEMICOLON .)
    DOT             reduce using rule 238 (Semi -> SEMICOLON .)
    RETURN          reduce using rule 238 (Semi -> SEMICOLON .)
    BREAK           reduce using rule 238 (Semi -> SEMICOLON .)
    CONTINUE        reduce using rule 238 (Semi -> SEMICOLON .)
    GOTO            reduce using rule 238 (Semi -> SEMICOLON .)
    IF              reduce using rule 238 (Semi -> SEMICOLON .)
    FOR             reduce using rule 238 (Semi -> SEMICOLON .)
    DEFER           reduce using rule 238 (Semi -> SEMICOLON .)
    FALLTHROUGH     reduce using rule 238 (Semi -> SEMICOLON .)
    GO              reduce using rule 238 (Semi -> SEMICOLON .)
    PRINT           reduce using rule 238 (Semi -> SEMICOLON .)
    SCAN            reduce using rule 238 (Semi -> SEMICOLON .)
    SWITCH          reduce using rule 238 (Semi -> SEMICOLON .)
    SEMICOLON       reduce using rule 238 (Semi -> SEMICOLON .)
    CASE            reduce using rule 238 (Semi -> SEMICOLON .)
    DEFAULT         reduce using rule 238 (Semi -> SEMICOLON .)


state 6

    (222) SourceFile -> PackageClause Semi . ImportDeclRep TopLevelDeclRep
    (223) ImportDeclRep -> . epsilon
    (224) ImportDeclRep -> . ImportDeclRep ImportDecl Semi
    (239) epsilon -> .

    IMPORT          reduce using rule 239 (epsilon -> .)
    FUNC            reduce using rule 239 (epsilon -> .)
    CONST           reduce using rule 239 (epsilon -> .)
    TYPE            reduce using rule 239 (epsilon -> .)
    VAR             reduce using rule 239 (epsilon -> .)
    $end            reduce using rule 239 (epsilon -> .)

    epsilon                        shift and go to state 9
    ImportDeclRep                  shift and go to state 10

state 7

    (227) PackageClause -> PACKAGE PackageName .

    SEMICOLON       reduce using rule 227 (PackageClause -> PACKAGE PackageName .)


state 8

    (228) PackageName -> IDENTIFIER .

    STRING_LIT      reduce using rule 228 (PackageName -> IDENTIFIER .)
    SEMICOLON       reduce using rule 228 (PackageName -> IDENTIFIER .)


state 9

    (223) ImportDeclRep -> epsilon .

    IMPORT          reduce using rule 223 (ImportDeclRep -> epsilon .)
    FUNC            reduce using rule 223 (ImportDeclRep -> epsilon .)
    CONST           reduce using rule 223 (ImportDeclRep -> epsilon .)
    TYPE            reduce using rule 223 (ImportDeclRep -> epsilon .)
    VAR             reduce using rule 223 (ImportDeclRep -> epsilon .)
    $end            reduce using rule 223 (ImportDeclRep -> epsilon .)


state 10

    (222) SourceFile -> PackageClause Semi ImportDeclRep . TopLevelDeclRep
    (224) ImportDeclRep -> ImportDeclRep . ImportDecl Semi
    (225) TopLevelDeclRep -> . TopLevelDeclRep TopLevelDecl Semi
    (226) TopLevelDeclRep -> . epsilon
    (229) ImportDecl -> . IMPORT ImportSpec
    (230) ImportDecl -> . IMPORT LPAREN ImportSpecRep RPAREN
    (239) epsilon -> .

    IMPORT          shift and go to state 14
    FUNC            reduce using rule 239 (epsilon -> .)
    CONST           reduce using rule 239 (epsilon -> .)
    TYPE            reduce using rule 239 (epsilon -> .)
    VAR             reduce using rule 239 (epsilon -> .)
    $end            reduce using rule 239 (epsilon -> .)

    TopLevelDeclRep                shift and go to state 11
    epsilon                        shift and go to state 12
    ImportDecl                     shift and go to state 13

state 11

    (222) SourceFile -> PackageClause Semi ImportDeclRep TopLevelDeclRep .
    (225) TopLevelDeclRep -> TopLevelDeclRep . TopLevelDecl Semi
    (48) TopLevelDecl -> . Declaration
    (49) TopLevelDecl -> . FunctionDecl
    (45) Declaration -> . ConstDecl
    (46) Declaration -> . TypeDecl
    (47) Declaration -> . VarDecl
    (80) FunctionDecl -> . FUNC FunctionName CreateScope Function EndScope
    (81) FunctionDecl -> . FUNC FunctionName CreateScope Signature EndScope
    (50) ConstDecl -> . CONST ConstSpec
    (51) ConstDecl -> . CONST LPAREN ConstSpecRep RPAREN
    (63) TypeDecl -> . TYPE TypeSpec
    (64) TypeDecl -> . TYPE LPAREN TypeSpecRep RPAREN
    (71) VarDecl -> . VAR VarSpec
    (72) VarDecl -> . VAR LPAREN VarSpecRep RPAREN

    $end            reduce using rule 222 (SourceFile -> PackageClause Semi ImportDeclRep TopLevelDeclRep .)
    FUNC            shift and go to state 21
    CONST           shift and go to state 15
    TYPE            shift and go to state 24
    VAR             shift and go to state 22

    TypeDecl                       shift and go to state 20
    VarDecl                        shift and go to state 23
    FunctionDecl                   shift and go to state 16
    TopLevelDecl                   shift and go to state 17
    Declaration                    shift and go to state 18
    ConstDecl                      shift and go to state 19

state 12

    (226) TopLevelDeclRep -> epsilon .

    FUNC            reduce using rule 226 (TopLevelDeclRep -> epsilon .)
    CONST           reduce using rule 226 (TopLevelDeclRep -> epsilon .)
    TYPE            reduce using rule 226 (TopLevelDeclRep -> epsilon .)
    VAR             reduce using rule 226 (TopLevelDeclRep -> epsilon .)
    $end            reduce using rule 226 (TopLevelDeclRep -> epsilon .)


state 13

    (224) ImportDeclRep -> ImportDeclRep ImportDecl . Semi
    (238) Semi -> . SEMICOLON

    SEMICOLON       shift and go to state 5

    Semi                           shift and go to state 25

state 14

    (229) ImportDecl -> IMPORT . ImportSpec
    (230) ImportDecl -> IMPORT . LPAREN ImportSpecRep RPAREN
    (233) ImportSpec -> . PackageNameDotOpt ImportPath
    (234) PackageNameDotOpt -> . DOT
    (235) PackageNameDotOpt -> . PackageName
    (236) PackageNameDotOpt -> . epsilon
    (228) PackageName -> . IDENTIFIER
    (239) epsilon -> .

    LPAREN          shift and go to state 26
    DOT             shift and go to state 31
    IDENTIFIER      shift and go to state 8
    STRING_LIT      reduce using rule 239 (epsilon -> .)

    ImportSpec                     shift and go to state 27
    epsilon                        shift and go to state 28
    PackageName                    shift and go to state 29
    PackageNameDotOpt              shift and go to state 30

state 15

    (50) ConstDecl -> CONST . ConstSpec
    (51) ConstDecl -> CONST . LPAREN ConstSpecRep RPAREN
    (54) ConstSpec -> . IdentifierList TypeExprListOpt
    (56) IdentifierList -> . IDENTIFIER
    (57) IdentifierList -> . IdentifierRep
    (58) IdentifierRep -> . IdentifierRep COMMA IDENTIFIER
    (59) IdentifierRep -> . IDENTIFIER COMMA IDENTIFIER

    LPAREN          shift and go to state 34
    IDENTIFIER      shift and go to state 36

    ConstSpec                      shift and go to state 32
    IdentifierRep                  shift and go to state 33
    IdentifierList                 shift and go to state 35

state 16

    (49) TopLevelDecl -> FunctionDecl .

    SEMICOLON       reduce using rule 49 (TopLevelDecl -> FunctionDecl .)


state 17

    (225) TopLevelDeclRep -> TopLevelDeclRep TopLevelDecl . Semi
    (238) Semi -> . SEMICOLON

    SEMICOLON       shift and go to state 5

    Semi                           shift and go to state 37

state 18

    (48) TopLevelDecl -> Declaration .

    SEMICOLON       reduce using rule 48 (TopLevelDecl -> Declaration .)


state 19

    (45) Declaration -> ConstDecl .

    SEMICOLON       reduce using rule 45 (Declaration -> ConstDecl .)


state 20

    (46) Declaration -> TypeDecl .

    SEMICOLON       reduce using rule 46 (Declaration -> TypeDecl .)


state 21

    (80) FunctionDecl -> FUNC . FunctionName CreateScope Function EndScope
    (81) FunctionDecl -> FUNC . FunctionName CreateScope Signature EndScope
    (84) FunctionName -> . IDENTIFIER

    IDENTIFIER      shift and go to state 38

    FunctionName                   shift and go to state 39

state 22

    (71) VarDecl -> VAR . VarSpec
    (72) VarDecl -> VAR . LPAREN VarSpecRep RPAREN
    (75) VarSpec -> . IdentifierList Type ExpressionListOpt
    (56) IdentifierList -> . IDENTIFIER
    (57) IdentifierList -> . IdentifierRep
    (58) IdentifierRep -> . IdentifierRep COMMA IDENTIFIER
    (59) IdentifierRep -> . IDENTIFIER COMMA IDENTIFIER

    LPAREN          shift and go to state 41
    IDENTIFIER      shift and go to state 36

    IdentifierRep                  shift and go to state 33
    VarSpec                        shift and go to state 40
    IdentifierList                 shift and go to state 42

state 23

    (47) Declaration -> VarDecl .

    SEMICOLON       reduce using rule 47 (Declaration -> VarDecl .)


state 24

    (63) TypeDecl -> TYPE . TypeSpec
    (64) TypeDecl -> TYPE . LPAREN TypeSpecRep RPAREN
    (67) TypeSpec -> . AliasDecl
    (68) TypeSpec -> . TypeDef
    (69) AliasDecl -> . IDENTIFIER EQUALS Type
    (70) TypeDef -> . IDENTIFIER Type

    LPAREN          shift and go to state 45
    IDENTIFIER      shift and go to state 47

    TypeSpec                       shift and go to state 46
    TypeDef                        shift and go to state 43
    AliasDecl                      shift and go to state 44

state 25

    (224) ImportDeclRep -> ImportDeclRep ImportDecl Semi .

    IMPORT          reduce using rule 224 (ImportDeclRep -> ImportDeclRep ImportDecl Semi .)
    FUNC            reduce using rule 224 (ImportDeclRep -> ImportDeclRep ImportDecl Semi .)
    CONST           reduce using rule 224 (ImportDeclRep -> ImportDeclRep ImportDecl Semi .)
    TYPE            reduce using rule 224 (ImportDeclRep -> ImportDeclRep ImportDecl Semi .)
    VAR             reduce using rule 224 (ImportDeclRep -> ImportDeclRep ImportDecl Semi .)
    $end            reduce using rule 224 (ImportDeclRep -> ImportDeclRep ImportDecl Semi .)


state 26

    (230) ImportDecl -> IMPORT LPAREN . ImportSpecRep RPAREN
    (231) ImportSpecRep -> . ImportSpecRep ImportSpec Semi
    (232) ImportSpecRep -> . epsilon
    (239) epsilon -> .

    RPAREN          reduce using rule 239 (epsilon -> .)
    DOT             reduce using rule 239 (epsilon -> .)
    IDENTIFIER      reduce using rule 239 (epsilon -> .)
    STRING_LIT      reduce using rule 239 (epsilon -> .)

    epsilon                        shift and go to state 48
    ImportSpecRep                  shift and go to state 49

state 27

    (229) ImportDecl -> IMPORT ImportSpec .

    SEMICOLON       reduce using rule 229 (ImportDecl -> IMPORT ImportSpec .)


state 28

    (236) PackageNameDotOpt -> epsilon .

    STRING_LIT      reduce using rule 236 (PackageNameDotOpt -> epsilon .)


state 29

    (235) PackageNameDotOpt -> PackageName .

    STRING_LIT      reduce using rule 235 (PackageNameDotOpt -> PackageName .)


state 30

    (233) ImportSpec -> PackageNameDotOpt . ImportPath
    (237) ImportPath -> . STRING_LIT

    STRING_LIT      shift and go to state 51

    ImportPath                     shift and go to state 50

state 31

    (234) PackageNameDotOpt -> DOT .

    STRING_LIT      reduce using rule 234 (PackageNameDotOpt -> DOT .)


state 32

    (50) ConstDecl -> CONST ConstSpec .

    SEMICOLON       reduce using rule 50 (ConstDecl -> CONST ConstSpec .)


state 33

    (57) IdentifierList -> IdentifierRep .
    (58) IdentifierRep -> IdentifierRep . COMMA IDENTIFIER
